--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
+beautifulsoup4==4.5.3
 click==6.7
+decorator==4.0.11
 defusedxml==0.5.0
 Flask==0.12
 Flask-Login==0.4.0
 Flask-OpenID==1.2.5
 Flask-SQLAlchemy==2.2
 Flask-WTF==0.14.2
+HTMLParser==0.0.2
 itsdangerous==0.24
 Jinja2==2.9.5
 MarkupSafe==1.0
+pbr==2.0.0
 python3-openid==3.1.0
+requests==2.13.0
+six==1.10.0
 SQLAlchemy==1.1.6
+sqlalchemy-migrate==0.11.0
+sqlparse==0.2.3
+Tempita==0.5.2
 Werkzeug==0.12.1
 WTForms==2.1
